<resources>
    <string name="app_name">Karteikartenapp</string>
    <string name="action_settings">Settings</string>
    <string name="Abfrageknopf">Abfrage</string>
    <string name="Lernmodusknopf">Lernen</string>
    <string name="Vorwärtsknopf">ins Fach</string>
    <string name="InsThema">ins Thema</string>
    <string name="IndieKarte">In die Karte</string>
    <string name="Fächer">Fächer</string>
    <string name="Themen">Themen</string>
    <string name="Karten">Karten</string>
    <string name="server_client_id">659724553025-kbt3c7ev8r7740t7d1dg7kskecdtbeob.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string-array name="Fachauswählen">
        <item>Mathe</item>
        <item>Englisch</item>
        <item>Deutsch</item>
        <item>Geschichte</item>
    </string-array>


    <string-array name="Themaauswählen">
        <item>bla</item>
    </string-array>
</resources>