<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CardsOverviewActivity">

    <Button
        android:id="@+id/neueKarte"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:onClick = "newKarte"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/kartenliste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neueKarte" />

    <Button
        android:id="@+id/abfragekarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Abfrageknopf"
        android:onClick = "startTestMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lernmodusfach" />

    <Button
        android:id="@+id/lernmodusfach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lernmodusknopf"
        android:onClick="startStudyMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zurueckzumstart"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="goToPrevious"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reininsFach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToNext"
        android:text="@string/IndieKarte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/abfragekarte" />

    <TextView
        android:id="@+id/topicsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Karten"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ReihenfolgeändernButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reihenfolge ändern"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zurueckzumstart" />

    <Button
        android:id="@+id/KArtebearbeitenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Karte bearbeiten"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neueKarte" />

</androidx.constraintlayout.widget.ConstraintLayout>