<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".overviewactivities.ShowCardsActivity">

    <Button
        android:id="@+id/create_card_btn"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:onClick = "createCard"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/cards_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_card_btn" />

    <Button
        android:id="@+id/quiz_mode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Abfrageknopf"
        android:onClick = "startQuizMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/study_mode_subject_btn" />

    <Button
        android:id="@+id/study_mode_subject_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lernmodusknopf"
        android:onClick="startStudyMode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back_to_start_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="goToPrevious"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_subject_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editCard"
        android:text="@string/IndieKarte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quiz_mode_btn" />

    <TextView
        android:id="@+id/topics_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/Karten"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_sort_order_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reihenfolge ändern"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_to_start_btn" />

    <Button
        android:id="@+id/delete_subjects_btn"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:onClick="deleteCard"
        app:icon="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_card_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>