<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kartenuebersicht">

    <Button
        android:id="@+id/neueKarte"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:onClick = "newKarte"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/kartenliste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neueKarte"
        />

    <Button
        android:id="@+id/abfragekarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Abfrageknopf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lernmodusfach" />

    <Button
        android:id="@+id/lernmodusfach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lernmodusknopf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zurueckzumstart"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:onClick="zurueck"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reininsFach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="vorwaerts"
        android:text="@string/Vorwärtsknopf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/abfragekarte" />

    <TextView
        android:id="@+id/themenname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>