<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".overviewactivities.ShowSubjectsActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_custom_dark"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Fächer"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/heading" >

        <Button
            android:id="@+id/back_to_start_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/btn_custom"
            android:gravity="center"
            android:onClick="goToPrevious"
            app:icon="@android:drawable/ic_menu_revert" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete_subjects_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:onClick="deleteSubject"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconGravity="start"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edit_subjects_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:onClick="editSubject"
            app:icon="@android:drawable/ic_menu_edit"
            app:iconGravity="start" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/create_topic_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/btn_custom"
            android:gravity="center"
            android:onClick="newSubject"
            app:icon="@android:drawable/ic_menu_add" />


    </LinearLayout>



    <ListView
        android:id="@+id/subjects_listView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_below="@id/back_to_start_btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/quiz_subject_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:layout_below="@id/subjects_listView"
            android:onClick="startQuizMode"
            android:text="@string/Abfrageknopf"
            android:gravity="center" />


        <Button
            android:id="@+id/study_mode_subject_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="5dp"
            android:layout_below="@id/subjects_listView"
            android:layout_gravity="center"
            android:onClick="startStudyMode"
            android:text="@string/Lernmodusknopf"
            android:gravity="center" />


        <Button
            android:id="@+id/go_to_subject_btn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/subjects_listView"
            android:layout_gravity="right"
            android:onClick="goToTopics"
            app:icon="@drawable/baseline_arrow_forward_ios_20"
            app:iconTint="#FFFFFF" />

    </LinearLayout>


</LinearLayout>