<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".overviewactivities.ShowTopicsActivity">


    <TextView
        android:id="@+id/subject_name_textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/Themen"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/back_to_subject_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:onClick="goToPrevious"
            app:icon="@android:drawable/ic_menu_revert"
            android:background="@drawable/btn_custom" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete_topics_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:onClick="deleteTopic"
            app:icon="@android:drawable/ic_menu_delete" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/edit_topic_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:onClick = "editTopic"
            app:icon="@android:drawable/ic_menu_edit" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/export_pdf_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:gravity="center"
            android:onClick="pdfexport"
            app:icon="@android:drawable/ic_menu_share" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/create_topic_btn"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:onClick = "createTopic"
            app:icon="@android:drawable/ic_menu_add" />

    </LinearLayout>


    <ListView
        android:id="@+id/topics_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/back_to_subject_btn" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom"
        android:layout_below="@+id/topics_listView" >

        <Button
            android:id="@+id/quiz_topic_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Abfrageknopf"
            android:onClick = "startQuizMode"
            android:gravity="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/study_mode_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lernen"
            android:onClick="startStudyMode"
            android:gravity="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/go_to_cards_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InsThema"
            android:onClick="goToCards"
            android:gravity="center" />

    </LinearLayout>



</LinearLayout>